--- a/QueueIT/Views/Queues/Show.cshtml
+++ b/QueueIT/Views/Queues/Show.cshtml
@@ -18,10 +18,10 @@
             <button class="add-task" id="add-task" onclick="addTask()">
                 <span class="thick-plus">+</span> Add Task
             </button>
-            <button class="my-btn my-btn-secondary" id="create-task" hidden="true" onclick="createTask()">
+            <button class="my-btn my-btn-secondary grow-secondary" id="create-task" hidden="true" onclick="createTask()">
                 Create Task
             </button>
-            <button type="button" id="close-btn" hidden="true" class="close" onclick="cancelTask()">
+            <button type="button" id="close-btn" hidden="true" class="close grow-secondary" onclick="cancelTask()">
                 <span class="primary-text">&times;</span>
             </button>
         </div>
