--- a/QueueIT/wwwroot/css/myStyles.css
+++ b/QueueIT/wwwroot/css/myStyles.css
@@ -296,8 +296,6 @@ div.border-bk-3 {
 
 a.trans-link {
     color: #ffffff;
-    width: 100%;
-    height: 100%;
 }
 
 a.trans-link:hover {
@@ -317,7 +315,6 @@ a.trans-link:hover {
 
 .grow-secondary:hover {
     transform: scale(1.1);
-    border: 1px solid #000000;
     border-radius: 1rem;
 }
 
@@ -493,7 +490,7 @@ button.create{
 }
 
 div.custom-border {
-    border-left: 2px solid #363636;
+    border-right: 2px solid #363636;
 }
 
 div.rounded {
