Added files out of gitignore

--- a/QueueIT/Views/Shared/_LoggedInLayout.cshtml
+++ b/QueueIT/Views/Shared/_LoggedInLayout.cshtml
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="~/css/site.css"/>
     <link rel="stylesheet" href="~/css/myStyles.css"/>
     <link rel="icon" href="~/favicon.png"/>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
 </head>
 <body class="background-grey">
@@ -214,7 +215,7 @@
 </footer>
 
 <environment include="Development">
-    <script src="~/lib/jquery/dist/jquery.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </environment>
 <environment exclude="Development">
