--- a/QueueIT/Views/Account/UserHome.cshtml
+++ b/QueueIT/Views/Account/UserHome.cshtml
@@ -78,7 +78,7 @@
                             }
                             <div class="card m-10">
                                 <button class="card-body home-card grow shadow-lg" data-toggle="modal"
-                                        data-target="#CreateQueueModal" aria-hidden="true">
+                                        data-target="#CreateQueueModal" data-id="@team.Id" aria-hidden="true">
                                     <span class="thick-plus">+</span> Add a Queue
                                 </button>
                             </div>
