--- a/QueueIT/Views/Queues/Show.cshtml
+++ b/QueueIT/Views/Queues/Show.cshtml
@@ -4,25 +4,53 @@
     ViewBag.Title = @Model.CurrentQueue.Title;
     Layout = "_LoggedInLayout";
 }
-<br/>
+<div id="alert_placeholder">
+
+</div>
+
+<br/><br/>
 <div class="container-row">
-    <h4 class="display-6 secondary-text">@Model.CurrentQueue.Title | @Model.CurrentTeam.Name |&nbsp;</h4> 
-        @if (Model.CurrentQueue.IsPrivate)
-        {
-            <h4 class="display-6 secondary-text"><span>Private</span></h4>
-            <img class="lock" src="https://img.icons8.com/ios/50/000000/lock.png" alt="">
-        }
-        else
-        {
-            <h4 class="display-6 secondary-text"><span>Public</span></h4>
-            <img class="lock" src="https://img.icons8.com/ios/50/000000/unlock.png" alt="">
-        }
+    <h4 class="display-6 secondary-text">@Model.CurrentQueue.Title | 
+        <a id="team-name-link" href="/Teams/Show/@Model.CurrentTeam.Id">@Model.CurrentTeam.Name</a> 
+        |&nbsp;</h4>
+    @if (Model.CurrentQueue.IsPrivate)
+    {
+        <h4 class="display-6 secondary-text">
+            <span>Private</span>
+        </h4>
+        <img class="lock" src="https://img.icons8.com/ios/50/000000/lock.png" alt="">
+    }
+    else
+    {
+        <h4 class="display-6 secondary-text">
+            <span>Public</span>
+        </h4>
+        <img class="lock" src="https://img.icons8.com/ios/50/000000/unlock.png" alt="">
+    }
 </div>
 <div class="kanban" id="kanban">
     <div class="kanban-col shadow" id="todo-col">
         <div class="kanban-col-header">Todo</div>
         <div class="kanban-col-body" id="todo-body">
-            @* <div class="kanban-col-item drag">DRAG ME</div> *@
+            @foreach (var task in Model.TaskList)
+            {
+                if (task.Status == 0)
+                {
+                    <div id="@task.Id" class="kanban-col-item drag">
+                        @task.Title
+                        <div class="view">
+                            <a onclick="openModal(@task.Id, 'view')" data-target="#TaskDetailsViewModal" data-toggle="modal" href="#TaskDetailsViewModal">
+                                <i class="fa fa-search grow-secondary"></i>
+                            </a>
+                        </div>
+                        <div class="edit">
+                            <a onclick="openModal(@task.Id, 'edit')" data-target="#TaskDetailsModal" data-toggle="modal" href="#TaskDetailsModal">
+                                <i class="fa fa-pencil grow-secondary"></i>
+                            </a>
+                        </div>
+                    </div>
+                }
+            }
         </div>
         <div class="kanban-col-footer" id="todo-footer">
             <button class="add-task" id="add-task" onclick="addTask()">
@@ -39,26 +67,144 @@
     <div class="kanban-col shadow">
         <div class="kanban-col-header">Doing</div>
         <div class="kanban-col-body" id="doing-body">
-            
+            @foreach (var task in Model.TaskList)
+            {
+                if (task.Status == 1)
+                {
+                    <div id="@task.Id" class="kanban-col-item drag">
+                        @task.Title
+                        <div class="view">
+                            <a onclick="openModal(@task.Id, 'view')" data-target="#TaskDetailsViewModal" data-toggle="modal" href="#TaskDetailsViewModal">
+                                <i class="fa fa-search grow-secondary"></i>
+                            </a>
+                        </div>
+                        <div class="edit">
+                            <a onclick="openModal(@task.Id, 'edit')" data-target="#TaskDetailsModal" data-toggle="modal" href="#TaskDetailsModal">
+                                <i class="fa fa-pencil grow-secondary"></i>
+                            </a>
+                        </div>
+                    </div>
+                }
+            }
         </div>
     </div>
     <div class="kanban-col shadow">
         <div class="kanban-col-header">Done</div>
         <div class="kanban-col-body" id="done-body">
-            
+            @foreach (var task in Model.TaskList)
+            {
+                if (task.Status == 2)
+                {
+                    <div id="@task.Id" class="kanban-col-item drag">
+                        @task.Title
+                        <div class="view">
+                            <a onclick="openModal(@task.Id, 'view')" data-target="#TaskDetailsViewModal" data-toggle="modal" href="#TaskDetailsViewModal">
+                                <i class="fa fa-search grow-secondary"></i>
+                            </a>
+                        </div>
+                        <div class="edit">
+                            <a onclick="openModal(@task.Id, 'edit')" data-target="#TaskDetailsModal" data-toggle="modal" href="#TaskDetailsModal">
+                                <i class="fa fa-pencil grow-secondary"></i>
+                            </a>
+                        </div>
+                    </div>
+                }
+            }
         </div>
     </div>
     <div class="kanban-col shadow" id="blocked-col">
         <div class="kanban-col-header">Blocked</div>
         <div class="kanban-col-body" id="blocked-body">
-        
+            @foreach (var task in Model.TaskList)
+            {
+                if (task.Status == 3)
+                {
+                    <div id="@task.Id" class="kanban-col-item drag">
+                        @task.Title
+                        <div class="view">
+                            <a onclick="openModal(@task.Id, 'view')" data-target="#TaskDetailsViewModal" data-toggle="modal" href="#TaskDetailsViewModal">
+                                <i class="fa fa-search grow-secondary"></i>
+                            </a>
+                        </div>
+                        
+                        <div class="edit">
+                            <a onclick="openModal(@task.Id, 'edit')" data-target="#TaskDetailsModal" data-toggle="modal" href="#TaskDetailsModal">
+                                <i class="fa fa-pencil grow-secondary"></i>
+                            </a>
+                        </div>
+                    </div>
+                }
+            }
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="TaskDetailsModal" tabindex="-1" role="dialog"
+     aria-labelledby="TaskDetailsModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content background-grey">
+            <div class="modal-header">
+                <h4 class="modal-title secondary-text" id="TaskDetailsModalLabel">Edit Task Details</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="close">
+                    <span aria-hidden="true" class="primary-text">&times;</span>
+                    <span class="sr-only">Close</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <input id="modalTaskId" hidden="true" value=""/>
+                    <label for="modalTaskTitle" class="secondary-text">Title</label>
+                    <input id="modalTaskTitle" class="form-control modal-input" placeholder="Enter a title for your task"/>
+                    <label for="modalTaskDesc" class="secondary-text">Description (optional)</label>
+                    <textarea id="modalTaskDesc" class="form-control modal-input" placeholder="Brief Description of your task"></textarea>
+                    <label for="modalDueDatePicker" class="secondary-text">Due Date (optional)</label><br/>
+                    <input type="date" class="modal-input date" id="modalDueDatePicker"/>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <form asp-action="DeleteTask" asp-controller="Queues" method="POST">
+                    <div class="btn-group">
+                        <button type="button" class="btn my-btn-group-success" data-dismiss="modal" id="modalSaveTask">Save</button>
+                        <input hidden id="hiddenTaskId" name="taskIdDel"/>
+                        <input hidden id="hiddenQueueId" name="queueIdDel"/>
+                        <button type="submit" class="btn my-btn-group-danger">Delete</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="TaskDetailsViewModal" tabindex="-1" role="dialog"
+     aria-labelledby="TaskDetailsViewModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content background-grey">
+            <div class="modal-header">
+                <h4 class="modal-title secondary-text" id="TaskDetailsViewModalLabel">View Task Details</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="close">
+                    <span aria-hidden="true" class="primary-text">&times;</span>
+                    <span class="sr-only">Close</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <label for="task-title" class="secondary-text">Title</label>
+                <h4 id="task-title" class="primary-text display-7"></h4>
+                <label for="task-desc" class="secondary-text">Description</label>
+                <h4 id="task-desc" class="primary-text display-8"></h4>
+                <label for="task-due" class="secondary-text">Due Date</label>
+                <h4 id="task-due" class="primary-text display-9"></h4>
+            </div>
+            <div class="modal-footer">
+                <small class="disabled-text">Click the pencil icon to edit this task.</small>
+            </div>
         </div>
     </div>
 </div>
 
 
 @section Scripts {
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js" type="text/javascript">
+    </script>
     <script type="text/javascript">
         function addTask() {
             // grab elements
@@ -105,23 +251,159 @@
             var newTask = document.getElementById('new-task');
             if (newTask.value !== "") {
                 // create new kanban item
-                var $newTaskDiv = 
-                    $('<div class="drag kanban-col-item"><form asp-action="CreateTask" asp-controller="Queues" method="POST">'
-                        + '<span name="testInput">' + newTask.value + '</span>' + '<button type="submit">submit</button>' + '</form></div>');
-                $('#todo-body').append($newTaskDiv);
-                $newTaskDiv.draggable({ stack: ".drag" });
-                $newTaskDiv.draggable({
-                    revert: function(event, ui) {
-                        $(this).data("uiDraggable").originalPosition = {
-                            top: 0,
-                            left: 0
-                        };
+                var $newTaskDiv =
+                    $('<div id="new-item" class="drag kanban-col-item new-item">' +
+                        newTask.value +
+                        '<div class="view"><a id="newTaskDetailsViewBtn" data-target="#TaskDetailsViewModal" data-toggle="modal" href="#TaskDetailsViewModal"><i class="fa fa-search grow-secondary"></i></a></div>' +
+                        '<div class="edit"><a id="newTaskDetailsBtn" data-target="#TaskDetailsModal" data-toggle="modal" href="#TaskDetailsModal"><i class="fa fa-pencil grow-secondary"></i></a></div></div>');
 
-                        return !event;
-                    }
-                });
-                newTask.value = "";
+
+                var task = newTask.value;
+                if (task) {
+                    $.ajax({
+                        type: 'post',
+                        url: '/Queues/CreateTask',
+                        beforeSend: function(req) {
+                            req.setRequestHeader('Content-Type', 'application/json');
+                        },
+                        data: JSON.stringify(
+                            {
+                                taskTitle: task,
+                                queueId: @Model.CurrentQueue.Id,
+                                CreatorId: '@Model.CurrentUserId',
+                                Status: 0
+                            }),
+                        success: function(taskId) {
+                            if (taskId === -1) {
+                                showAlert("Task already exists. Enter a unique name", "alert-danger");
+
+                            } else {
+                                $newTaskDiv.id = taskId;
+                                $('#todo-body').append($newTaskDiv);
+                                document.getElementById('new-item').setAttribute("id", taskId);
+                                document.getElementById('newTaskDetailsBtn')
+                                    .setAttribute("onclick", "openModal(" + taskId + ", 'edit')");
+                                document.getElementById('newTaskDetailsViewBtn')
+                                    .setAttribute("onclick", "openModal(" + taskId + ", 'view')");
+                                newTask.value = "";
+                                $newTaskDiv.draggable({ stack: ".drag" });
+                                $newTaskDiv.draggable({
+                                    revert: function(event, ui) {
+                                        $(this).data("uiDraggable").originalPosition = {
+                                            top: 0,
+                                            left: 0
+                                        };
+
+                                        return !event;
+                                    }
+                                });
+                            }
+                        }
+                    });
+                }
             }
+        }
+
+        function openModal(taskId, modalType) {
+            $.ajax({
+                type: 'get',
+                url: '/Queues/DetailModal',
+                beforeSend: function(req) {
+                    req.setRequestHeader('Content-type', 'application/json');
+                },
+                data: { taskId: taskId },
+                success: function(data) {
+
+                    if (modalType === "edit") {
+                        if (data.dueOn != null) {
+                            var date = new Date(data.dueOn);
+                            var dd = date.getDate();
+                            var mm = date.getMonth() + 1;
+
+                            var yyyy = date.getFullYear();
+                            if (dd < 10) {
+                                dd = '0' + dd;
+                            }
+                            if (mm < 10) {
+                                mm = '0' + mm;
+                            }
+                            date = yyyy + '-' + mm + '-' + dd;
+
+                            $('#modalDueDatePicker').val(date);
+                        } else {
+                            $('#modalDueDatePicker').val(data.dueOn);
+                        }
+                        $('#hiddenTaskId').val(data.id);
+                        $('#hiddenQueueId').val(@Model.CurrentQueue.Id);
+                        $('#modalTaskId').val(data.id);
+                        $('#modalTaskTitle').val(data.title);
+                        $('#modalTaskDesc').val(data.description);
+                        $('#modalSaveTask').attr("onclick", "saveTask()");
+                    } else if (modalType === "view") {
+                        if (data.dueOn != null) {
+                            var date = new Date(data.dueOn);
+                            var dd = date.getDate();
+                            var mm = date.getMonth() + 1;
+
+                            var yyyy = date.getFullYear();
+                            if (dd < 10) {
+                                dd = '0' + dd;
+                            }
+                            if (mm < 10) {
+                                mm = '0' + mm;
+                            }
+                            date = yyyy + '-' + mm + '-' + dd;
+
+                            $('#task-due').text(date);
+                        } else {
+                            $('#task-due').text(data.dueOn);
+                        }
+                        $('#task-title').text(data.title);
+                        $('#task-desc').text(data.description);
+                    }
+                }
+            });
+        }
+
+        function showAlert(message, alertType) {
+
+            $('#alert_placeholder').append('<div id="alertDiv" class="fade show alert ' +
+                alertType +
+                '"><a class="close" data-dismiss="alert">&times;</a><span>' +
+                message +
+                '</span></div>');
+
+            setTimeout(
+                function() { // this will automatically close the alert and remove this if the users doesnt close it in 5 secs
+                    $("#alertDiv").remove();
+                },
+                5000);
+        }
+
+        function saveTask() {
+            $.ajax({
+                type: 'post',
+                url: '/Queues/DetailModal',
+                beforeSend: function(req) {
+                    req.setRequestHeader('Content-type', 'application/json');
+                },
+                data: JSON.stringify({
+                    taskId: $('#modalTaskId').val(),
+                    newTaskTitle: $('#modalTaskTitle').val(),
+                    newTaskDesc: $('#modalTaskDesc').val() || "",
+                    newTaskDueOn: $('#modalDueDatePicker').val()
+                }),
+                success: function(resp) {
+                    if (resp === -1) {
+                        showAlert("Task does not exist.", "alert-danger");
+                    }
+                    document.getElementById(resp).innerHTML.innerHTML = $('#modalTaskTitle').val();
+                    showAlert("Task saved!", "alert-success");
+                },
+                error: function() {
+                    showAlert("Error in saving Task", "alert-danger");
+                }
+            });
         }
 
         $("#todo-footer").keyup(function(event) {
@@ -146,9 +428,48 @@
                 var draggable = ui.draggable;
                 // move draggable into droppable
                 draggable.appendTo(droppable);
+                var statusCode = getTaskStatus(droppable);
+                console.dir(draggable);
+
+                updateTaskStatus(statusCode, draggable[0].id);
+
                 draggable.css({ top: '0px', left: '0px' });
             }
         });
+
+        function getTaskStatus(droppable) {
+            switch (droppable[0].id) {
+            case 'todo-body':
+                return 0;
+            case 'doing-body':
+                return 1;
+            case 'done-body':
+                return 2;
+            case 'blocked-body':
+                return 3;
+            default:
+                return -1;
+            }
+        }
+
+        function updateTaskStatus(status, taskId) {
+            console.log("in updateTaskStatus. status:" + status + " Taskid:" + taskId);
+            $.ajax({
+                type: 'post',
+                url: '/Queues/UpdateTaskStatus',
+                beforeSend: function(req) {
+                    req.setRequestHeader('Content-type', 'application/json');
+                },
+                data: JSON.stringify({
+                    newTaskStatus: status,
+                    taskId: taskId
+                }),
+                success: function() {
+
+                }
+
+            });
+        }
     </script>
 
 }
