--- a/QueueIT/wwwroot/css/myStyles.css
+++ b/QueueIT/wwwroot/css/myStyles.css
@@ -70,7 +70,7 @@ input.reg-input {
     width: 300px;
 }
 
-input:focus { 
+input:focus {
     outline: 0;
     box-shadow: 0 0 0 4px #363636;
 }
@@ -126,8 +126,8 @@ button.my-btn {
     white-space: nowrap;
     border: 1px solid transparent;
     border-radius: 0.25rem;
-    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, 
-        box-shadow 0.15s ease-in-out;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out,
+    box-shadow 0.15s ease-in-out;
     margin: 8px 8px 0 8px;
 }
 
@@ -163,7 +163,7 @@ button.my-btn-danger {
 }
 
 button.my-btn-primary:disabled,
-button[disabled]{
+button[disabled] {
     border: 1px solid #999999;
     background-color: #cccccc;
     color: #666666;
@@ -175,6 +175,28 @@ button.my-btn-danger:hover {
 
 button.right {
     float: right;
+}
+
+button.my-btn-group-success {
+    background-image: linear-gradient(90deg, #0015b4, #00055d);
+    color: #ffffff;
+    height: 36px;
+    border: 1px solid black;
+}
+
+button.my-btn-group-success:hover {
+    background-image: linear-gradient(90deg, #001594, #000545);
+}
+
+button.my-btn-group-danger {
+    background-image: linear-gradient(-90deg, #ff0000, #5d0b2f);
+    color: #ffffff;
+    height: 36px;
+    border: 1px solid black;
+}
+
+button.my-btn-group-danger:hover {
+    background-image: linear-gradient(-90deg, #dc0000, #490b23);
 }
 
 button.my-btn-secondary {
@@ -192,13 +214,12 @@ button.my-btn-secondary:hover {
 button.my-btn-outline-secondary {
     color: #ffffff;
     background-color: transparent;
-    border-color: #ffffff;
+    border-color: #ff6000;
 }
 
 button.my-btn-outline-secondary:hover {
     color: #ffffff;
-    background-color:transparent;
-    border-color: linear-gradient(-90deg, #ff0049, #ff6000);
+    background-image: linear-gradient(-90deg, #ff0049, #ff6000);
 }
 
 div.container-row {
@@ -248,6 +269,9 @@ div.kanban-col-body {
 }
 
 div.kanban-col-item {
+    position: relative;
+    display: inline-block;
+    width: 98%;
     background-color: #363636;
     margin: 4px 2px 4px 2px;
     padding: 2px 5px 2px 5px;
@@ -255,6 +279,49 @@ div.kanban-col-item {
     border-radius: .25rem;
     border: 1px solid #000000;
     cursor: grab;
+}
+
+div.kanban-col-item:hover .edit {
+    display: block;
+}
+
+div.kanban-col-item:hover .view {
+    display: block
+}
+
+#team-name-link {
+    color: #FFFFFF;
+}
+
+#team-name-link:hover {
+    text-decoration: none;
+}
+
+
+.view {
+    padding-right: 2vw;
+    padding-top: .25vh;
+    position: absolute;
+    right: 0;
+    top: 0;
+    display: none;
+}
+
+.view a {
+    color: #a4a4a4;
+}
+
+.edit {
+    padding-right: .5vw;
+    padding-top: .25vh;
+    position: absolute;
+    right: 0;
+    top: 0;
+    display: none;
+}
+
+.edit a {
+    color: #a4a4a4;
 }
 
 div.kanban-col-item:active {
@@ -279,7 +346,7 @@ div.setting-header {
 
 div.setting-body {
     background-color: #363636;
-    padding: 2rem 2rem 2rem 2rem;    
+    padding: 2rem 2rem 2rem 2rem;
 }
 
 div.setting-footer {
@@ -288,14 +355,18 @@ div.setting-footer {
     border-radius: 0 0 .5rem .5rem;
 }
 
+#blank-space {
+    flex: 2;
+}
+
 #name-header {
-    flex: 5; 
+    flex: 2;
     padding-right: 5px;
 }
 
 #privacy-header {
-    flex: 3; 
-    display: flex; 
+    flex: 3;
+    display: flex;
     padding-top: 10px;
 }
 
@@ -343,7 +414,7 @@ input.new-task:focus {
 button.add-task {
     color: #a4a4a4;
     background-color: #212121;
-    text-align:center;
+    text-align: center;
     margin: 4px 2px 4px 2px;
     padding: 2px 5px 2px 5px;
     border: none;
@@ -356,7 +427,7 @@ button.quick-link {
     border: none;
 }
 
-button.quick-link:hover{
+button.quick-link:hover {
     background: rgba(164, 164, 164, .2);
     border-radius: .25rem;
     cursor: pointer;
@@ -382,12 +453,33 @@ div.home-card:focus {
     cursor: pointer;
 }
 
-#team-desc {
+#team-desc-div {
     padding: 5px 5px 5px 5px;
     width: 75%;
 }
 
+#team-desc-edit {
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.2;
+    color: #fff;
+    background: transparent;
+    margin-bottom: 3px;
+    margin-top: 0;
+    padding: 1px 3px 1px 3px;
+}
 
+#team-name-edit {
+    font-size: 3.5rem;
+    font-weight: 300;
+    line-height: 1.2;
+    height: auto;
+    background: transparent;
+    margin-bottom: 3px;
+    margin-top: 0;
+    padding: 1px 3px 1px 3px;
+    color: #fff;
+}
 
 button.home-card {
     background-image: linear-gradient(180deg, #ff3c00, #ff0049);
@@ -426,16 +518,20 @@ a.trans-link:hover {
     text-decoration: none;
 }
 
-.grow { transition: all .2s ease-in-out; }
+.grow {
+    transition: all .2s ease-in-out;
+}
 
-.grow:hover { 
+.grow:hover {
     transform: scale(1.1);
     border: 1px solid #ffffff;
     border-radius: .25rem;
     cursor: pointer;
 }
 
-.grow-secondary { transition: all .2s ease-in-out; }
+.grow-secondary {
+    transition: all .2s ease-in-out;
+}
 
 .grow-secondary:hover {
     transform: scale(1.1);
@@ -542,7 +638,9 @@ span.hoverable:hover {
     background-color: red;
 }
 
-.dropdown-toggle:after { content: none }
+.dropdown-toggle:after {
+    content: none
+}
 
 button.link {
     color: #007bff;
@@ -573,7 +671,7 @@ h4.dropdown-header {
     text-align: center;
 }
 
-button.create{
+button.create {
     white-space: normal;
     padding: 0 5px 0 5px;
     font-weight: 400;
@@ -588,8 +686,8 @@ button.create{
 
 #team-profile-container {
     background-color: #424242;
-    width:fit-content;
-    min-width: 800px;
+    width: fit-content;
+    min-width: 72vw;
     padding: 2vh 0 0 0;
 }
 
@@ -597,7 +695,7 @@ button.create{
     padding: 0 0 2vh 0;
 }
 
-#edit-team-profile-btn {
+button.m-15 {
     margin: 15px 15px 15px 15px;
 }
 
@@ -617,7 +715,7 @@ button.create{
 }
 
 .modal-backdrop,
-.modal-backdrop.fade.in{
+.modal-backdrop.fade.in {
     opacity: 1;
     filter: alpha(opacity=100);
     background: #fff;
@@ -677,6 +775,16 @@ img.lock {
     font-weight: bold;
 }
 
+#new-task-input {
+    background: transparent;
+    border: none;
+    color: #a4a4a4;
+}
+
+#new-task-input:hover {
+
+}
+
 #team-profile-members {
     width: 75%;
     color: #a4a4a4;
@@ -696,6 +804,8 @@ td {
 td.team-member-td {
     vertical-align: middle;
     border-top: 1px solid #a4a4a4;
+    width: 14vw;
+    min-width: 196px;
 }
 
 #member-role-td {
@@ -758,6 +868,10 @@ td.team-member-td {
 
 .modal-input:hover {
     background-color: #FFFFFF;
+}
+
+input.date {
+    border-radius: .25rem;
 }
 
 
